--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "veloxapi",
-  "version": "0.2.0-alpha.1",
+  "version": "0.2.0-alpha.4",
   "description": "An ultra-fast, zero-dependency Node.js web framework built entirely with Node.js built-in modules",
   "main": "lib/index.js",
   "type": "module",
@@ -36,12 +36,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/veloxapi/veloxapi.git"
+    "url": "git+https://github.com/karandaid/velox_api.git"
   },
   "bugs": {
-    "url": "https://github.com/veloxapi/veloxapi/issues"
+    "url": "https://github.com/karandaid/velox_api/issues"
   },
-  "homepage": "https://github.com/veloxapi/veloxapi#readme",
+  "homepage": "https://karandaid.github.io/velox_api",
   "engines": {
     "node": ">=18.0.0"
   },
